@@ -65,6 +65,10 @@
    - dtucker@cvs.openbsd.org 2006/12/13 08:36:36
      [regress/cfgmatch.sh]
      Additional test for multiple PermitOpen entries.  ok djm@
+   - pvalchev@cvs.openbsd.org 2007/06/07 19:41:46
+     [regress/cipher-speed.sh regress/try-ciphers.sh]
+     test umac-64@openssh.com
+     ok djm@
 
 20070927
  - (dtucker) [configure.ac atomicio.c] Fall back to including <sys/poll.h> if
@@ -3336,4 +3340,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4774 2007/10/26 04:45:13 djm Exp $
+$Id: ChangeLog,v 1.4775 2007/10/26 04:45:57 djm Exp $
